<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/primary_color"
            app:layout_scrollFlags="scroll|enterAlways" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/item_detail"
                android:textSize="20dp"
                android:textColor="@color/title_text_color"
                android:gravity = "center" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#ffff">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/item_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="20dp">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="20dp">

                <TextView
                    android:id="@+id/item_price"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="left" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="20dp">

                <TextView
                    android:id="@+id/item_visit"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_website"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="center_horizontal" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#dad8d8" />

                <TextView
                    android:id="@+id/item_pick"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_this"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
