<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/primary_color"
            app:layout_scrollFlags="scroll|enterAlways" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shipping_address"
                android:textSize="20dp"
                android:textColor="@color/title_text_color"
                android:gravity = "center" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#2c3039">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address_line_1"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="center_vertical"/>

                <EditText
                    android:id="@+id/address_line_1"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address_line_2"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/address_line_2"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/city"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/city"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/state"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/state"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/zip"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/zip"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/country"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/country"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone_number"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="start" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffff">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:text="@string/confirm"
                    android:layout_marginTop="16dp"
                    android:textColor="#ffff"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_shape"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
