<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/primary_color"
            app:layout_scrollFlags="scroll|enterAlways" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_new_gift"
                android:textSize="20dp"
                android:textColor="@color/title_text_color"
                android:gravity = "center" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#ffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="16dp"
                android:textColor="@color/content_text_color" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:text="Set due date"
                android:onClick="showDatePickerDialog"
                android:background="@drawable/button_shape"/>

            <TextView
                android:id="@+id/select_date"
                android:hint="dd/mm/yy"
                android:textColorHint="@color/content_text_hint_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/content_text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="20dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="left"/>

                <EditText
                    android:id="@+id/title_edit_text"
                    android:hint="set up event title"
                    android:textColorHint="@color/content_text_hint_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/content_text_color"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffff"
                android:padding="20dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/reason"
                    android:textColor="@color/content_text_color"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="left" />

                <Spinner
                    android:id="@+id/reason_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="#ffff" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffff"
                android:padding="20dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/description"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/content_text_color"
                    android:gravity="left" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/content_text_color"
                    android:enabled="true"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:background="@android:drawable/edit_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffff">

                <Button
                    android:id="@+id/ebaySearchButton"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/search_from_ebay"
                    android:layout_marginTop="16dp"
                    android:textColor="#ffff"
                    android:background="@drawable/button_shape"
                    android:textSize="16dp"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


